--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@react-navigation/material-bottom-tabs": "^5.2.12",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
-    "expo": "^38.0.4",
+    "axios": "^0.19.2",
+    "expo": "^38.0.8",
+    "expo-ads-admob": "~8.2.1",
     "expo-asset": "~8.1.7",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
@@ -49,8 +51,7 @@
     "react-native-screens": "~2.9.0",
     "react-native-textinput-effects": "^0.6.1",
     "react-native-web": "~0.11.7",
-    "yup": "^0.29.1",
-    "expo-ads-admob": "~8.2.1"
+    "yup": "^0.29.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
