--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "react-native-paper": "^3.10.1",
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^1.9.0",
-    "react-native-safe-area-context": "3.0.2",
+    "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-textinput-effects": "^0.6.1",
     "react-native-web": "~0.11.7",
